--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,8 @@
 $container-width: 1200px;
 $main-shift: 20px;
 $color-primary: hsl(180, 66%, 49%);
-$color-primary-alt: hsl(257, 27%, 26%);
+$color-secondary: hsl(257, 27%, 26%);
+$color-accent: #fff;
 $color-text: hsl(0, 0%, 75%);
 $color-text-alt: hsl(257, 7%, 63%);
 $color-title: hsl(255, 11%, 22%);
