--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import '@/vars';
+@use '@/styles/vars' as *;
 
 *,
 *::after,
@@ -13,7 +13,7 @@ html {
 body {
     font-family: 'Poppins', sans-serif;
 
-    background-color: hsl(0, 0%, 97%);
+    background-color: hsl(0, 0%, 95%);
     margin: 0;
 }
 
@@ -25,7 +25,7 @@ body {
 
 .primary-link {
     font-size: 1.2rem;
-    color: #fff !important;
+    color: $color-accent;
     text-decoration: none;
     font-weight: 700;
 
@@ -34,4 +34,12 @@ body {
     border: none;
     border-radius: 2rem;
     cursor: pointer;
+
+    &:hover {
+        background-color: lighten($color: $color-primary, $amount: 5);
+    }
+
+    &:active {
+        background-color: lighten($color: $color-primary, $amount: 10);
+    }
 }
