--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,4 +1,5 @@
-@import '@/vars';
+@use '@/styles/breakpoints' as bp;
+@use '@/styles/vars' as *;
 
 .Header {
     &__container {
@@ -27,7 +28,7 @@
         right: $main-shift;
 
         padding: 2rem;
-        background-color: $color-primary-alt;
+        background-color: $color-secondary;
         border-radius: 0.5rem;
         text-align: center;
 
@@ -46,7 +47,7 @@
     &__link {
         padding: 1rem 0;
 
-        color: #fff;
+        color: $color-accent;
         font-weight: 700;
         text-decoration: none;
         font-size: 1.5rem;
@@ -54,9 +55,21 @@
 
     &__login {
         padding-top: 2rem;
+
+        & > a:first-child {
+            padding-right: 1.5rem;
+        }
+
+        & > a:last-child {
+            color: $color-accent;
+        }
     }
 
-    @media screen and (min-width: 666px) {
+    &__hamburger {
+        transform: translateX(8px);
+    }
+
+    @media screen and (min-width: bp.$md) {
         &__nav,
         &__nav-items,
         &__login {
