--- a/src/components/Shorter/style.scss
+++ b/src/components/Shorter/style.scss
@@ -1,4 +1,5 @@
-@import '@/vars';
+@use '@/styles/breakpoints' as bp;
+@use '@/styles/vars' as *;
 
 .Shorter {
     &__container {
@@ -10,7 +11,7 @@
         grid-template-columns: 1fr;
 
         background-image: url(images/bg-shorten-mobile.svg);
-        background-color: $color-primary-alt;
+        background-color: $color-secondary;
         background-repeat: no-repeat;
         background-position: top right;
 
@@ -22,7 +23,6 @@
     &__input {
         font-size: 1.3rem;
         padding: 0.8rem 1rem 0.7rem;
-        margin-bottom: 0.3rem;
         border: 2px solid transparent;
         outline: none;
         border-radius: 0.3rem;
@@ -38,6 +38,7 @@
         font-size: 0.9rem;
         color: $color-error;
         margin: 0;
+        padding-top: 0.3rem;
     }
 
     &__button {
@@ -47,7 +48,7 @@
 
     &__link {
         font-size: 1rem;
-        background-color: #fff;
+        background-color: $color-accent;
         margin: 1.5rem 0;
         padding: 0.5rem 0 1.5rem;
 
@@ -68,7 +69,7 @@
         }
 
         &-copy {
-            color: #fff;
+            color: $color-accent;
             font-size: 1.2rem;
             font-weight: 700;
             text-align: center;
@@ -89,16 +90,13 @@
         }
     }
 
-    @media screen and (min-width: 666px) {
+    @media screen and (min-width: bp.$md) {
         &__form {
             grid-template-columns: 3fr 1fr;
             column-gap: 1rem;
 
             background-image: url(images/bg-shorten-desktop.svg);
             padding: 2.5rem;
-        }
-
-        &__input {
         }
 
         &__button {
