--- a/src/components/Statistics/style.scss
+++ b/src/components/Statistics/style.scss
@@ -1,4 +1,5 @@
-@import '@/vars';
+@use '@/styles/breakpoints' as bp;
+@use '@/styles/vars' as *;
 
 .Statistics {
     &__container {
@@ -36,7 +37,7 @@
 
     &__item {
         padding: 0 1.5rem 2rem;
-        background-color: #fff;
+        background-color: $color-accent;
         border-radius: 0.2rem;
 
         &:nth-child(2) {
@@ -77,7 +78,7 @@
             margin: 0 auto;
             padding: 1rem;
             border-radius: 50%;
-            background-color: $color-primary-alt;
+            background-color: $color-secondary;
             transform: translateY(-50%);
         }
 
@@ -94,7 +95,7 @@
         }
     }
 
-    @media screen and (min-width: 767px) {
+    @media screen and (min-width: bp.$md) {
         &__container {
             padding-bottom: 7rem;
         }
@@ -105,7 +106,7 @@
         }
 
         &__item {
-            padding: 0 1rem 2rem;
+            padding: 0 clamp(1rem, 3vw, 2rem) 2rem;
 
             &:nth-child(2) {
                 transform: translateY(1.5rem);
