unified icons and buttons

--- a/src/components/Shorter/style.scss
+++ b/src/components/Shorter/style.scss
@@ -43,7 +43,6 @@
 
     &__button {
         margin: 1rem 0 0;
-        border-radius: 0.3rem !important;
     }
 
     &__link {
@@ -69,25 +68,16 @@
         }
 
         &-copy {
-            color: $color-accent;
-            font-size: 1.2rem;
-            font-weight: 700;
-            text-align: center;
-
-            border: none;
-            outline: none;
-            border-radius: 0.2em;
-            background-color: $color-primary;
             width: calc(100% - 3rem);
-            padding: 0.75rem;
-            margin: 0 1.5rem;
-
-            cursor: pointer;
 
             transition: all 0.2s;
 
             &.copied {
                 background-color: hsl(260, 8%, 14%);
+
+                &:hover {
+                    background-color: hsl(260, 8%, 14%);
+                }
             }
         }
     }
@@ -128,11 +118,15 @@
             }
 
             &-copy {
-                font-size: 1rem;
-                margin: 0;
                 flex-basis: 100px;
                 justify-self: flex-end;
             }
+        }
+    }
+
+    @media screen and (min-width: bp.$lg) {
+        &__form {
+            grid-template-columns: 4fr 1fr;
         }
     }
 }
