--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -1,11 +1,11 @@
 @use '@/styles/vars' as *;
 
 .Button {
-    color: $color-accent;
+    color: $color-neutral-100;
     text-decoration: none;
     font-weight: 700;
 
-    background-color: $color-primary;
+    background-color: $color-primary-100;
     border: none;
     cursor: pointer;
 
@@ -28,10 +28,10 @@
     }
 
     &:hover {
-        background-color: lighten($color: $color-primary, $amount: 5);
+        background-color: lighten($color: $color-primary-100, $amount: 5);
     }
 
     &:active {
-        background-color: lighten($color: $color-primary, $amount: 10);
+        background-color: lighten($color: $color-primary-100, $amount: 10);
     }
 }
