--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -27,13 +27,13 @@
         font-size: 2.6rem;
         line-height: 1.1em;
         margin: 0;
-        color: $color-title;
+        color: $color-neutral-400;
     }
 
     &__text {
         font-size: 1.2em;
         line-height: 1.5em;
-        color: $color-text-alt;
+        color: $color-neutral-300;
     }
 
     @media screen and (min-width: bp.$md) {
