--- a/src/components/PreFooter/style.scss
+++ b/src/components/PreFooter/style.scss
@@ -3,7 +3,7 @@
 
 .PreFooter {
     background-image: url(images/bg-boost-mobile.svg);
-    background-color: $color-secondary;
+    background-color: $color-primary-200;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -16,7 +16,7 @@
     }
 
     &__title {
-        color: $color-accent;
+        color: $color-neutral-100;
         font-size: 2rem;
         line-height: 1.1em;
         margin: 0;
