--- a/src/components/Statistics/style.scss
+++ b/src/components/Statistics/style.scss
@@ -13,13 +13,13 @@
         line-height: 1.1em;
         margin: 0;
         margin-bottom: 1rem;
-        color: $color-title;
+        color: $color-neutral-400;
     }
 
     &__text {
         font-size: 1.2em;
         line-height: 1.5em;
-        color: $color-text-alt;
+        color: $color-neutral-300;
 
         max-width: 500px;
         margin: 0 auto 2rem;
@@ -37,7 +37,7 @@
 
     &__item {
         padding: 0 1.5rem 2rem;
-        background-color: $color-accent;
+        background-color: $color-neutral-100;
         border-radius: 0.2rem;
 
         &:nth-child(2) {
@@ -53,7 +53,7 @@
                 width: 0.7rem;
                 height: var(--gap);
 
-                background-color: $color-primary;
+                background-color: $color-primary-100;
             }
 
             &::before {
@@ -78,20 +78,20 @@
             margin: 0 auto;
             padding: 1rem;
             border-radius: 50%;
-            background-color: $color-secondary;
+            background-color: $color-primary-200;
             transform: translateY(-50%);
         }
 
         &-title {
             font-size: 1.3rem;
             line-height: 1.1em;
-            color: $color-title;
+            color: $color-neutral-400;
             margin: 0;
         }
 
         &-text {
             font-size: 0.9em;
-            color: $color-text-alt;
+            color: $color-neutral-300;
         }
     }
 
@@ -119,7 +119,7 @@
                     width: var(--gap);
                     height: 0.7rem;
 
-                    background-color: $color-primary;
+                    background-color: $color-primary-100;
                 }
 
                 &::before {
