--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,9 +1,11 @@
 $container-width: 1100px;
 $main-shift: 20px;
-$color-primary: hsl(180, 66%, 49%);
-$color-secondary: hsl(257, 27%, 26%);
-$color-accent: #fff;
-$color-text: hsl(0, 0%, 75%);
-$color-text-alt: hsl(257, 7%, 63%);
-$color-title: hsl(255, 11%, 22%);
-$color-error: hsl(0, 87%, 67%);
+
+$color-primary-100: hsl(180, 66%, 49%);
+$color-primary-200: hsl(257, 27%, 26%);
+$color-secondary: hsl(0, 87%, 67%);
+$color-neutral-100: hsl(0, 0%, 100%);
+$color-neutral-200: hsl(0, 0%, 75%);
+$color-neutral-300: hsl(257, 7%, 63%);
+$color-neutral-400: hsl(255, 11%, 22%);
+$color-neutral-500: hsl(260, 8%, 14%);
