--- a/src/components/Shorter/style.scss
+++ b/src/components/Shorter/style.scss
@@ -10,7 +10,7 @@
         display: grid;
         grid-template-columns: 1fr;
 
-        background-image: url(images/bg-shorten-mobile.svg);
+        background-image: url(./bg-shorten-mobile.svg);
         background-color: $color-primary-200;
         background-repeat: no-repeat;
         background-position: top right;
@@ -31,6 +31,10 @@
         &.error {
             border-color: $color-secondary;
             color: $color-secondary;
+
+            &::placeholder {
+                color: $color-secondary;
+            }
         }
     }
 
@@ -87,7 +91,7 @@
             grid-template-columns: 3fr 1fr;
             column-gap: 1rem;
 
-            background-image: url(images/bg-shorten-desktop.svg);
+            background-image: url(./bg-shorten-desktop.svg);
             padding: 2.5rem;
         }
 
