add scroll animations

--- a/src/components/CallToAction/style.scss
+++ b/src/components/CallToAction/style.scss
@@ -1,7 +1,7 @@
 @use '@/styles/breakpoints' as bp;
 @use '@/styles/vars' as *;
 
-.PreFooter {
+.CallToAction {
     background-image: url(./bg-boost-mobile.svg);
     background-color: $color-primary-200;
     background-size: cover;
