change redux to context

--- a/src/components/Shorter/style.scss
+++ b/src/components/Shorter/style.scss
@@ -73,6 +73,7 @@
 
         &-copy {
             width: calc(100% - 3rem);
+            margin-left: 1.5rem;
 
             transition: all 0.2s;
 
